# retry-after-utils

./: ACCEPTANCE.md  DESIGN.md  LICENSE  PM.md  README.md  pyproject.toml
docs/: ACCEPTANCE.md  DESIGN.md  PRODUCT.md
src/retry_after_utils/: __init__.py  core.py
tests/: test_core.py
